Fix and add new stuff for the tabs
Link to tab on the same page now slide the page to the top instead
of just jumping suddenly.
Fix broken layout at small screen size.
When using hashtag in the address, the page now start at the top
instead of at the anchor.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -493,6 +493,11 @@ ul.tabs li a.active {
 	.tabs-content {
 		border:none;
 	}
+	
+	.tabs-content > div.row {
+		padding-left:0;
+		padding-right:0;
+	}
 }
 
 /**/
